--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -30,6 +30,32 @@
     <string name="columns">कॉलम</string>
     <string name="language">भाषा</string>
     <string name="change_theme">विषय को परिवर्तित करें</string>
+    <string name="application">आवेदन</string>
+    <string name="information">जानकारी</string>
+    <string name="other">अन्य</string>
+    <string name="open_in_wikipedia">विकिपीडिया में खोलें</string>
+    <string name="JohnHortonConway">जॉन हॉर्टन कॉनवे</string>
+    <string name="JohnHortonConway_card_description">अंग्रेजी गणितज्ञ ने महत्वपूर्ण बना दिया है
+        परिमित समूहों, गाँठ सिद्धांत, संख्या सिद्धांत, कॉम्बिनेटरियल गेम सिद्धांत और कोडिंग सिद्धांत में योगदान।
+        विशेष रूप से, उन्हें मनोरंजक गणित में गेम ऑफ लाइफ नामक सेलुलर ऑटोमेटन का आविष्कार करने के लिए जाना जाता है</string>
+
+    <string name="the_game_of_life">जीवन संघरष</string>
+    <string name="GameOfLife_large_description">**जीवन का खेल**, जिसे \"जीवन\" के नाम से भी जाना जाता है, एक सेलुलर है
+        ऑटोमेटन 1970 में विकसित हुआ। यह एक शून्य-खिलाड़ी गेम है, जो दर्शाता है कि इसका विकास पूरी तरह से इसके द्वारा निर्धारित होता है
+        प्रारंभिक स्थिति और अतिरिक्त क्रियाओं की आवश्यकता नहीं है। खिलाड़ी एक बनाकर जीवन के खेल से जुड़ते हैं
+        प्रारंभिक विन्यास और उसके विकास का अवलोकन करना। विशेष रूप से, यह ट्यूरिंग पूर्ण है, जो इसे मॉडल करने की अनुमति देता है
+        यूनिवर्सल कंस्ट्रक्टर या कोई अन्य ट्यूरिंग मशीन।
+        \n\n## ब्रह्माण्ड विवरण
+        \n\nगेम ऑफ लाइफ का ब्रह्मांड एक अनंत, द्वि-आयामी ऑर्थोगोनल ग्रिड है जिसमें वर्गाकार कोशिकाएं शामिल हैं।
+        प्रत्येक कोशिका दो अवस्थाओं में से एक में मौजूद हो सकती है: जीवित या मृत (या क्रमशः आबादी और आबादी रहित)। इंटरैक्शन
+        प्रत्येक कोशिका और उसके आठ पड़ोसियों के बीच होता है, जो क्षैतिज, लंबवत या ऊर्ध्वाधर रूप से स्थित कोशिकाओं को घेरता है
+        तिरछे आसन्न.
+        \n\n## विकास नियम
+        \n\nसमय के प्रत्येक चरण में, निम्नलिखित परिवर्तन होते हैं:
+        \n\n- दो से कम जीवित पड़ोसियों वाली कोई भी जीवित कोशिका मर जाती है, जैसे कि कम जनसंख्या के कारण।
+        \n\n- दो या तीन जीवित पड़ोसियों वाली कोई भी जीवित कोशिका अगली पीढ़ी तक जीवित रहती है।
+        \n\n- तीन से अधिक जीवित पड़ोसियों वाली कोई भी जीवित कोशिका मर जाती है, जैसे कि अधिक जनसंख्या के कारण।
+        \n\n- बिल्कुल तीन जीवित पड़ोसियों वाली कोई भी मृत कोशिका एक जीवित कोशिका बन जाती है, मानो प्रजनन द्वारा।</string>
 
     <string name="onb_1_headline">डॉ. जॉन कॉनवे</string>
     <string name="onb_1_description">1970 में सेलुलर ऑटोमेटा विकास के इस अनुकरण को तैयार किया गया, जिसे \"गेम\" कहा गया
