--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -31,7 +31,31 @@
     <string name="language">Язык</string>
     <string name="change_theme">Изменить тему</string>
     <string name="application">Приложение</string>
+    <string name="information">Информация</string>
     <string name="other">Другое</string>
+    <string name="open_in_wikipedia">Открыть в Википедии</string>
+    <string name="JohnHortonConway">Джон Хортон Конвей</string>
+    <string name="JohnHortonConway_card_description">английский математик, внес значительный вклад
+        вклад в конечные группы, теорию узлов, теорию чисел, комбинаторную теорию игр и теорию кодирования.
+        Примечательно, что он известен изобретением клеточного автомата под названием «Игра жизни» в развлекательной математике.</string>
+
+    <string name="the_game_of_life">Игра Жизни</string>
+    <string name="GameOfLife_large_description">**Игра Жизни**, также известная как «Жизнь», представляет собой клеточную игру.
+        автомат, разработанный в 1970 году. Это игра с нулевым участием игроков, что указывает на то, что ее эволюция определяется исключительно ее
+        исходное состояние и не требует дополнительных действий. Игроки участвуют в Игре Жизни, создавая
+        первоначальная настройка и наблюдение за ее развитием. Примечательно, что он является полным по Тьюрингу, что позволяет моделировать
+        универсальный конструктор или любая другая машина Тьюринга.
+        \n\n## Описание вселенной
+        \n\nВселенная Игры Жизни представляет собой бесконечную двумерную ортогональную сетку, состоящую из квадратных ячеек.
+        Каждая ячейка может существовать в одном из двух состояний: живом или мертвом (или заселенном и незаселенном соответственно). Взаимодействие
+        происходит между каждой клеткой и ее восемью соседями, охватывая ячейки, расположенные горизонтально, вертикально или
+        прилегают по диагонали.
+        \n\n## Правила эволюции
+        \n\nНа каждом этапе времени происходят следующие переходы:
+        \n\n- Любая живая клетка, имеющая менее двух живых соседей, погибает, как бы из-за недопопуляции.
+        \n\n- Любая живая клетка с двумя или тремя живыми соседями продолжает жить до следующего поколения.
+        \n\n- Любая живая клетка, имеющая более трёх живых соседей, погибает, как бы от перенаселения.
+        \n\n- Любая мертвая клетка, имеющая ровно три живых соседа, становится живой клеткой, как бы путем размножения.</string>
 
     <string name="onb_1_headline">Доктор Джон Конвей</string>
     <string name="onb_1_description">В 1970 году разработал эту симуляцию эволюции клеточных автоматов, названную «Игра
