--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -31,7 +31,31 @@
     <string name="language">Мова</string>
     <string name="change_theme">Змінити тему</string>
     <string name="application">Додаток</string>
+    <string name="information">Інформація</string>
     <string name="other">Інше</string>
+    <string name="open_in_wikipedia">Відкрити у вікіпедії</string>
+    <string name="JohnHortonConway">Джон Хортон Конвей</string>
+    <string name="JohnHortonConway_card_description">англійський математик, зробив значні
+        внесок у скінченні групи, теорію вузлів, теорію чисел, теорію комбінаторних ігор і теорію кодування.
+        Примітно, що він відомий винаходом клітинного автомата під назвою «Гра життя» в рекреаційній математиці</string>
+
+    <string name="the_game_of_life">Гра життя</string>
+    <string name="GameOfLife_large_description">**Гра в життя**, також відома просто як «Життя», — це мобільний зв’язок
+        automaton, розроблений у 1970 році. Це гра без гравців, що вказує на те, що її еволюція визначається виключно її
+        початковий стан і не потребує додаткових дій. Гравці беруть участь у грі життя, створюючи
+        початкова конфігурація та спостереження за її розвитком. Примітно, що він повний за Тьюрингом, що дозволяє моделювати a
+        універсальний конструктор або будь-яка інша машина Тюрінга.
+        \n\n## Опис всесвіту
+        \n\nВсесвіт гри в життя — це нескінченна двовимірна ортогональна сітка, що складається з квадратних клітинок.
+        Кожна клітина може існувати в одному з двох станів: жива чи мертва (або заселена та незаселена відповідно). Взаємодія
+        відбувається між кожною клітинкою та її вісьмома сусідами, охоплюючи клітинки, розташовані горизонтально, вертикально або
+        діагонально прилеглі.
+        \n\n## Правила еволюції
+        \n\nНа кожному кроці в часі відбуваються такі переходи:
+        \n\n- Будь-яка жива клітина з менш ніж двома живими сусідами гине, ніби через недостатнє заповнення.
+        \n\n- Будь-яка жива клітина з двома або трьома живими сусідами живе до наступного покоління.
+        \n\n- Будь-яка жива клітина з більш ніж трьома живими сусідами гине, ніби через перенаселення.
+        \n\n- Будь-яка мертва клітина з рівно трьома живими сусідами стає живою клітиною, як би шляхом розмноження.</string>
 
     <string name="onb_1_headline">Доктор Джон Конвей</string>
     <string name="onb_1_description">У 1970 році розробив цю симуляцію еволюції клітинних автоматів, названу «Гра
