--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -37,34 +37,28 @@
     <string name="JohnHortonConway">जॉन हॉर्टन कॉनवे</string>
     <string name="JohnHortonConway_card_description">अंग्रेजी गणितज्ञ ने महत्वपूर्ण बना दिया है
         परिमित समूहों, गाँठ सिद्धांत, संख्या सिद्धांत, कॉम्बिनेटरियल गेम सिद्धांत और कोडिंग सिद्धांत में योगदान।
-        विशेष रूप से, उन्हें मनोरंजक गणित में गेम ऑफ लाइफ नामक सेलुलर ऑटोमेटन का आविष्कार करने के लिए जाना जाता है</string>
+        विशेष रूप से, उन्हें मनोरंजक गणित में गेम ऑफ लाइफ नामक सेलुलर ऑटोमेटन का आविष्कार करने के लिए जाना जाता है
+    </string>
 
     <string name="the_game_of_life">जीवन संघरष</string>
-    <string name="GameOfLife_large_description">**जीवन का खेल**, जिसे \"जीवन\" के नाम से भी जाना जाता है, एक सेलुलर है
-        ऑटोमेटन 1970 में विकसित हुआ। यह एक शून्य-खिलाड़ी गेम है, जो दर्शाता है कि इसका विकास पूरी तरह से इसके द्वारा निर्धारित होता है
-        प्रारंभिक स्थिति और अतिरिक्त क्रियाओं की आवश्यकता नहीं है। खिलाड़ी एक बनाकर जीवन के खेल से जुड़ते हैं
-        प्रारंभिक विन्यास और उसके विकास का अवलोकन करना। विशेष रूप से, यह ट्यूरिंग पूर्ण है, जो इसे मॉडल करने की अनुमति देता है
-        यूनिवर्सल कंस्ट्रक्टर या कोई अन्य ट्यूरिंग मशीन।
-        \n\n## ब्रह्माण्ड विवरण
-        \n\nगेम ऑफ लाइफ का ब्रह्मांड एक अनंत, द्वि-आयामी ऑर्थोगोनल ग्रिड है जिसमें वर्गाकार कोशिकाएं शामिल हैं।
-        प्रत्येक कोशिका दो अवस्थाओं में से एक में मौजूद हो सकती है: जीवित या मृत (या क्रमशः आबादी और आबादी रहित)। इंटरैक्शन
-        प्रत्येक कोशिका और उसके आठ पड़ोसियों के बीच होता है, जो क्षैतिज, लंबवत या ऊर्ध्वाधर रूप से स्थित कोशिकाओं को घेरता है
-        तिरछे आसन्न.
-        \n\n## विकास नियम
-        \n\nसमय के प्रत्येक चरण में, निम्नलिखित परिवर्तन होते हैं:
-        \n\n- दो से कम जीवित पड़ोसियों वाली कोई भी जीवित कोशिका मर जाती है, जैसे कि कम जनसंख्या के कारण।
-        \n\n- दो या तीन जीवित पड़ोसियों वाली कोई भी जीवित कोशिका अगली पीढ़ी तक जीवित रहती है।
-        \n\n- तीन से अधिक जीवित पड़ोसियों वाली कोई भी जीवित कोशिका मर जाती है, जैसे कि अधिक जनसंख्या के कारण।
-        \n\n- बिल्कुल तीन जीवित पड़ोसियों वाली कोई भी मृत कोशिका एक जीवित कोशिका बन जाती है, मानो प्रजनन द्वारा।</string>
+    <string name="GameOfLife_large_description">गेम ऑफ लाइफ, जिसे सिर्फ "लाइफ" के रूप में भी जाना जाता है, 1970 में
+        विकसित हुआ एक सेल्युलर ऑटोमेटन है। यह एक जीरो-प्लेयर गेम है, जिसका अर्थ है कि इसका विकास इसकी प्रारंभिक स्थिति
+        द्वारा निर्धारित होता है और इसके लिए अतिरिक्त क्रियाएँ आवश्यक नहीं हैं। एक व्यक्ति गेम ऑफ लाइफ के साथ इंटरएक्ट
+        करता है, एक प्रारंभिक रूप से रचित स्थिति बनाता है और देखता है कि यह कैसे विकसित होता है। यह ट्यूरिंग कम्प्लीट है
+        और एक यूनिवर्सल कन्स्ट्रक्टर या किसी अन्य ट्यूरिंग मशीन को मॉडल कर सकता है।
+    </string>
 
     <string name="onb_1_headline">डॉ. जॉन कॉनवे</string>
     <string name="onb_1_description">1970 में सेलुलर ऑटोमेटा विकास के इस अनुकरण को तैयार किया गया, जिसे \"गेम\" कहा गया
-        जीवन का\\", जहां खेल के मैदान पर प्रत्येक कोशिका सरल नियमों का पालन करती है</string>
+        जीवन का\\", जहां खेल के मैदान पर प्रत्येक कोशिका सरल नियमों का पालन करती है
+    </string>
     <string name="onb_2_headline">नियम 1</string>
     <string name="onb_2_description">एक खाली (मृत) कोशिका में, यदि वास्तव में तीन जीवित पड़ोसी हों, तो जीवन है
-        जन्म</string>
+        जन्म
+    </string>
     <string name="onb_3_headline">नियम 2</string>
     <string name="onb_3_description">यदि किसी जीवित कोशिका में दो या तीन जीवित पड़ोसी हों, तो वह जीवित रहती है;
-        अन्यथा, कोशिका मर जाती है (\"अकेलापन\" या \"भीड़भाड़\" के कारण)</string>
+        अन्यथा, कोशिका मर जाती है (\"अकेलापन\" या \"भीड़भाड़\" के कारण)
+    </string>
 
 </resources>
